# DemandForecastingTFT

./: README.md  pyproject.toml
logs/lightning_logs/lightning_logs/version_0/: hparams.yaml
logs/lightning_logs/lightning_logs/version_1/: hparams.yaml  projector_config.pbtxt
logs/lightning_logs/lightning_logs/version_1/01050/agency/: tensors.tsv
logs/lightning_logs/lightning_logs/version_1/01050/month/: tensors.tsv
logs/lightning_logs/lightning_logs/version_1/01050/sku/: tensors.tsv
logs/lightning_logs/lightning_logs/version_1/01050/special_days/: tensors.tsv
logs/lightning_logs/lightning_logs/version_1/checkpoints/: epoch=20-step=1050.ckpt
logs/lightning_logs/lightning_logs/version_2/: hparams.yaml
logs/lightning_logs/lightning_logs/version_2/00850/agency/: tensors.tsv
logs/lightning_logs/lightning_logs/version_2/00850/month/: tensors.tsv
logs/lightning_logs/lightning_logs/version_2/00850/sku/: tensors.tsv
logs/lightning_logs/lightning_logs/version_2/00850/special_days/: tensors.tsv
logs/lightning_logs/lightning_logs/version_2/checkpoints/: epoch=16-step=850.ckpt
logs/lightning_logs/lightning_logs/version_3/: hparams.yaml  projector_config.pbtxt
logs/lightning_logs/lightning_logs/version_3/00950/agency/: tensors.tsv
logs/lightning_logs/lightning_logs/version_3/00950/month/: tensors.tsv
logs/lightning_logs/lightning_logs/version_3/00950/sku/: tensors.tsv
logs/lightning_logs/lightning_logs/version_3/checkpoints/: epoch=18-step=950.ckpt
logs/lightning_logs/version_0/: hparams.yaml
logs/lightning_logs/version_1/: hparams.yaml
logs/lightning_logs/version_2/: hparams.yaml
output/savedmodels/: tft.ckpt
src/: api.py  baseline.py  dataloader.py  evaluate.py  optuna_tune.py  predict.py  train.py
src/tuning/: learning_rate_finder.py  tuning.py
(+1 files in other folders)
